# local_transfile_rdma

./: CMakeLists.txt  README.md
include/: rdma_client.h  rdma_common.h  rdma_server.h
src/: client_test.cc  rdma_client.cc  rdma_common.cc  rdma_server.cc  server_test.cc
